--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,13 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
   google_maps_flutter: ^2.2.5
-  location: ^4.4.0
+  geolocator: ^9.0.2
   image_picker: any
   pin_code_text_field: any
+  http: ^0.13.5
+  provider: ^6.0.5
+  firebase_database: ^10.1.1
+  chips_choice_null_safety: ^2.0.6
 
 
 
