more ui created

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1002421758436:ios:9b5afb8dd5cfd872357ff1",
-  "FIREBASE_PROJECT_ID": "mygrow-software",
-  "GCM_SENDER_ID": "1002421758436"
+  "GOOGLE_APP_ID": "1:404278849036:ios:586ea99293773c3d368829",
+  "FIREBASE_PROJECT_ID": "mygrow-software-d0a6a",
+  "GCM_SENDER_ID": "404278849036"
 }
