--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.5
   firebase_database: ^10.1.1
-  chips_choice_null_safety: ^2.0.6
+  firebase_storage:
+  chips_choice_null_safety: any
+  razorpay_flutter: ^1.3.4
 
 
 
@@ -71,8 +73,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - Images/passenger_icons/
+    - Images/good_icons/
+    - Images/cranes_icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
